Skip to content

GitLab

  • Menu
Projects Groups Snippets
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
  • Sign in / Register
  • VLC VLC
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 3,401
    • Issues 3,401
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 171
    • Merge requests 171
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Releases
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • VideoLAN
  • VLCVLC
  • Issues
  • #18335

Closed
Open
Created May 18, 2017 by Filip Roséen@FilipRoseen-refp

demux/playlist: xspf: inaccurate parsing of unknown extension with self-closing element

The expected behavior for attachment:extension.xspf and attachment:attribution.xspf would be to add one entry, vlc://pause, to the playlist while ignoring the data in <extension application="unknown>, which is not the case (nothing is added at all).

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking

VideoLAN code repository instance